src/objects/Price_Fee__c.object
<CustomObject>
    <fields>
        <fullName>account_segment_desc__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_segment_id__c</fullName>
        <label>Segment code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calc_account_segment_desc__c</fullName>
        <formula>UPPER( account_segment_desc__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>minimun_fee_per__c</fullName>
        <label>Minimun fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>product_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price Fees</relationshipLabel>
        <relationshipName>Price_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>validity_end_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>validity_start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <label>Tarifario</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>product_id__c</columns>
        <columns>account_segment_desc__c</columns>
        <columns>minimun_fee_per__c</columns>
        <columns>validity_start_date__c</columns>
        <columns>validity_end_date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PF-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tarifario</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>